--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-	"ip":"YOUR_ATERNOS_SERVER_IP",
-	"port": "YOUR_ATERNOS_SERVER_PORT",
-	"name": "BOT_NAME"
+	"ip":"sigmaserver22.aternos.me",
+	"port": "60553",
+	"name": "ahhhhhh"
 }
